--- a/shop/kickback-steals/page2.html
+++ b/shop/kickback-steals/page2.html
@@ -322,7 +322,7 @@
   <!-- Footer -->
  <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white"> The KickBack &copy; 2019</p>
+    <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
   </div>
  
 </footer>
