--- a/shop/kickback-steals/page3.html
+++ b/shop/kickback-steals/page3.html
@@ -246,7 +246,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white"> The Kickback &copy; 2019</p>
+      <p class="m-0 text-center text-white"> The Kikback &copy; 2019</p>
     </div>
    
   </footer>
