--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -375,7 +375,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
     </div>
     <!-- /.container -->
   </footer>
