--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
           
         </li>
 <!-- NavBar Ends here -->
@@ -115,11 +115,11 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Shop Name</h1>
+        <h1 class="my-4">Used (9/10 Condition)</h1>
         <div class="list-group">
-          <a href="../category1/page1.html" class="list-group-item">Used (9/10 Condition)</a>
-          <a href="../category2/page1.html" class="list-group-item">Used (8/10 Condition)</a>
-          <a href="../category3/page1.html" class="list-group-item">KickBack Steals </a>
+          <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
+          <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
+          <a href="../kickback-steals/page1.html" class="list-group-item">KickBack Steals</a>
         </div>
 
       </div>
