--- a/shop/kickback-steals/page1.html
+++ b/shop/kickback-steals/page1.html
@@ -263,6 +263,16 @@
  <footer class="py-5 bg-dark">
   <div class="container">
     <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
+    </div>
+    <div class="social-icons">
+          <a href="https://www.instagram.com/thekikback/">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://facebook.com/thekikback">
+            <i class="fab fa-facebook"></i>
+          </a>  
+                     
+  
   </div>
  
 </footer>
