--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
   <!-- social Icons end  -->
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
+ <!-- Slick Carousel-->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+<script src="./carousel-slick.js"></script>
   </head>
 
 
@@ -38,6 +46,10 @@
   }
   body {background-color: lightgrey;}
   </style>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
@@ -343,9 +355,14 @@
  <center>
     <iframe width="1200" height="850" src="https://www.youtube.com/embed/uVUeBOuI8Ik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </center >
-  <!-- Grand Opening Video Ends-->
+ <!-- Grand Opening Video Ends-->
 
-
+ <div class="carousel-slick">
+  <div>your content</div>
+  <div>your content</div>
+  <div>your content</div>
+</div>
+				
 
 </div>
 
