--- a/about/index.html
+++ b/about/index.html
@@ -106,7 +106,7 @@
 
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="../shop/Brand-new/page1.html">Brand New</a>
+        <a class="dropdown-item" href="../shop/brand-new/page1.html">Brand New</a>
         <a class="dropdown-item" href="../shop/used-9.10/page1.htm">Used (9/10 Condition)</a>
         <a class="dropdown-item" href="../shop/used-8.10/page1.html">Used (8/10 Condition)</a>
         <a class="dropdown-item" href="../shop/kickback-steals/page1.html">KickBack Steals</a>
@@ -215,7 +215,7 @@
       <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">ABOUT JAVEZ</h3>
         <p class="w3-center"><em>Shoe Connoisseur</em></p>
-        <p>Javez English is a young buisness owner. He is currently 23 and owns his own store, The Kikback in Middletown, Delaware. </p>
+        <p><font size="7"></font>Javez English is a young buisness owner. He is currently 23 and owns his own store, The Kikback in Middletown, Delaware.</font></p>
         <div class="w3-row">
           <div class="w3-col m6 w3-center w3-padding-large">
             
@@ -227,7 +227,7 @@
             <p>(waiting for Javez to send me more info)</p>
           </div>
         </div>
-        <p class="w3-large w3-center w3-padding-16">Javez's Strengths</p>
+        <p class="w3-large w3-center w3-padding-16" <p>Javez's Strengths</p>
         <p class="w3-wide"><i class=></i>Managing a Buisness</p>
         <div class="w3-light-grey">
           <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
