--- a/purchase-item/checkout.html
+++ b/purchase-item/checkout.html
@@ -44,7 +44,7 @@
       width: 50%;
       height: 50%;
   }
-  body {background-color: rgb(0, 0, 0);}
+  body {background-color:red;}
   </style>
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
@@ -143,7 +143,7 @@
     
       </div>
     </nav>
-    <!-- Navba Ends -->
+    <!-- Navbar Ends -->
 
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
