--- a/purchase-item/checkout.html
+++ b/purchase-item/checkout.html
@@ -34,6 +34,13 @@
   <!-- social Icons end  -->
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link href="style.css" rel="stylesheet">
   
   </head>
  <!-- Social Icons End -->
@@ -144,7 +151,7 @@
       </div>
     </nav>
     <!-- Navbar Ends -->
-
+</div>
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
@@ -216,7 +223,7 @@
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <input type="submit" value="Continue to checkout" class="btn-checkout">
+
       </form>
     </div>
   </div>
@@ -260,7 +267,42 @@
 <!-- ----------------------------------------------------------------- -->
 
 
+<div class="container">
+  <h2>The Kikback Merch</h2>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
 
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+          <div class="item active">
+              <img src="./img/platonic-pyramid.gif" alt="Stickers">
+          </div>
+
+          <div class="item">
+              <img src="./img/platonic-octahedron.gif" alt="TKB Wristband">
+          </div>
+
+          <div class="item">
+              <img src="./img/platonic-icosahedron.gif" alt="Lanyard">
+          </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+      </a>
+  </div>
+</div>
  <!-- Footer -->
 
  <footer>
