--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
 <!--Carousel Wrapper-->
 <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-2" data-ride="carousel">
 
+  <h2 style="color: red">Featured Products</h2>
 
   
     <!--Slides-->
@@ -486,8 +487,8 @@
     <!--/.Slides-->
       <!--Controls-->
       <div class="controls-top">
-          <a class="black-text" href="#multi-item-example" data-slide="prev"><i class="fas fa-angle-left fa-3x pr-3"></i></a>
-          <a class="black-text" href="#multi-item-example" data-slide="next"><i class="fas fa-angle-right fa-3x pl-3"></i></a>
+          <a class="black-text" href="#multi-item-example" data-slide="prev"  style="color:black"><i class="fas fa-angle-left fa-3x pr-3"></i></a>
+          <a class="black-text" href="#multi-item-example" data-slide="next"  style="color:black"><i class="fas fa-angle-right fa-3x pl-3"></i></a>
         </div>
         <!--/.Controls-->
   </div>
