--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
           <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
           <a class="dropdown-item" href="./shop/used-8.10/page1.html">Used (8/10 Condition)</a>
           <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
+          <a class="dropdown-item" href="./shop/100&down/index.html">KickBack Steals $100 & down</a>
+
         </div>
   <!-- Dropdown NavBar 1 Ends Here -->
 
