--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -80,6 +80,7 @@
         <a class="dropdown-item" href="../used-9.10/page1.html">Used (9/10 Condition)</a>
         <a class="dropdown-item" href="../used-8.10/page1.html">Used (8/10 Condition)</a>
         <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="../grade-school/grade-school.html">Grade School</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
@@ -127,7 +128,7 @@
     
         </li>
       </ul>
-      
+
       <a href="../../purchase-item/checkout-page.html" a class="a"> <i class="fa fa-shopping-cart" 
         aria-hidden="true" 
         style="padding-right:50px;"></i></a>
@@ -152,6 +153,7 @@
           <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
           <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
           <a href="../kickback-steals/page1.html" class="list-group-item">KickBack Steals</a>
+          <a href="../grade-school/grade-school.html" class="list-group-item">Grade School</a>
         </div>
 
       </div>
