--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -81,7 +81,7 @@
         <a class="dropdown-item" href="../used-8.10/page1.html">Used (8/10 Condition)</a>
         <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
         <a class="dropdown-item" href="../grade-school/grade-school.html">Grade School</a>
-      </div>
+            </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
     <!-- DropDown NavBar 2 Begins Here  -->
@@ -152,6 +152,7 @@
           <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
           <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
           <a href="../kickback-steals/page1.html" class="list-group-item">KickBack Steals</a>
+          <a href="../grade-school/grade-school.html" class="list-group-item">Grade School</a>
         </div>
 
       </div>
