--- a/about/index.html
+++ b/about/index.html
@@ -110,6 +110,7 @@
         <a class="dropdown-item" href="../shop/used-9.10/page1.htm">Used (9/10 Condition)</a>
         <a class="dropdown-item" href="../shop/used-8.10/page1.html">Used (8/10 Condition)</a>
         <a class="dropdown-item" href="../shop/kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="../shop/grade-school/grade-school.html">Grade School</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
@@ -184,7 +185,7 @@
       body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
       body, html {
         height: 100%;
-        color: rgb(255, 255, 255);
+        color: rgb(252, 252, 252);
         line-height: 1.8;
       }
       
