--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -172,6 +172,7 @@
             <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
             <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
             <a href="../kickback-steals/page1.html" class="list-group-item">KickBack Steals</a>
+            <a href="../grade-school/grade-school.html" class="list-group-item">Grade School</a>
           </div>
 
         </div>
