--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -97,6 +97,7 @@
             <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
             <a class="dropdown-item" href="./shop/used-8.10/page1.hmtl">Used (8/10 Condition)</a>
             <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
+            <a class="dropdown-item" href="../grade-school/grade-school.html">Grade School</a>
           </div>
     <!-- Dropdown NavBar 1 Ends Here -->
 
