--- a/restoration-page.html
+++ b/restoration-page.html
@@ -102,6 +102,8 @@
             <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
             <a class="dropdown-item" href="./shop/used-8.10/page1.html">Used (8/10 Condition)</a>
             <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
+            <a class="dropdown-item" href="./shop/100&down/index.html">KickBack Steals $100 & down</a>
+
           </div>
           <!-- Dropdown NavBar 1 Ends Here -->
 
@@ -142,7 +144,7 @@
                 </li>
       </ul>
 
-      <a href="./purchase-item/checkout.html" a class="a">
+      <a href="./purchase-item/checkout-page.html" a class="a">
         <i class="fa fa-shopping-cart" aria-hidden="true" style="padding-right:50px;"></i>
       </a>
 
