--- a/purchase-item/checkout-page.html
+++ b/purchase-item/checkout-page.html
@@ -168,9 +168,8 @@
   <!-- ----------------------------------------------------------------- -->
   <!-- ----------------------------------------------------------------- -->
 
-  <h2>Responsive Checkout Form</h2>
-  <p>Resize the browser window to see the effect. When the screen is less than 800px wide, make the two columns stack on top
-    of each other instead of next to each other.</p>
+  <h2>git </h2>
+  <p></p>
   <div class="row">
     <div class="col-75">
       <div class="container">
