--- a/purchase-item/checkout-page.html
+++ b/purchase-item/checkout-page.html
@@ -22,9 +22,9 @@
   <title>Shop Homepage - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/checkout.css" rel="stylesheet">
+  <link href="css/checkout-style.css" rel="stylesheet">
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="vendor/bootstrap/css/social-icon.css" rel="stylesheet">
+  <link href="css/social-icon.css" rel="stylesheet">
 
 
 
@@ -57,7 +57,7 @@
   }
 
   body {
-    background-color: red;
+    background-color: lightgrey;
   }
 </style>
 </head>
@@ -148,7 +148,7 @@
                 </li>
       </ul>
 
-      <a href="checkout.html" a class="a">
+      <a href="checkout-page.html" a class="a">
         <i class="fa fa-shopping-cart" aria-hidden="true" style="padding-right:50px;"></i>
       </a>
 
@@ -167,10 +167,10 @@
   <!-- ----------------------------------------------------------------- -->
   <!-- ----------------------------------------------------------------- -->
   <!-- ----------------------------------------------------------------- -->
+<center>
+  <h2 style="padding-right: 542px;"> Checkout Form</h2>
+</center>
 
-  <h2>Responsive Checkout Form</h2>
-  <p>Resize the browser window to see the effect. When the screen is less than 800px wide, make the two columns stack on top
-    of each other instead of next to each other.</p>
   <div class="row">
     <div class="col-75">
       <div class="container">
@@ -289,7 +289,7 @@
 
   <footer>
     <div id="left-footer">
-      <h5 class="m-0 text-center text-white" text> The KikBack &copy; 2019</h5>
+      <h5 class="m-0 text-center text-white" text style="background-color:red; padding-top"> The KikBack &copy; 2019</h5>
     </div>
 
 
